--- a/admin/static/history.css
+++ b/admin/static/history.css
@@ -186,6 +186,7 @@ main {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
+    width: 300%;
 }
 
 /* History Section */
@@ -194,6 +195,8 @@ main {
     padding: 20px;
     border-radius: 15px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    overflow-x: auto;
+    min-width: 800px;
 }
 
 .history-section h2 {
@@ -201,13 +204,16 @@ main {
 }
 
 .history-links {
-    max-height: 400px;  /* Adjusted max-height */
+    max-height: 400px;
+    overflow-x: auto;
     overflow-y: auto;
-    padding-right: 10px; /* Optional: To avoid text being clipped */
+    white-space: nowrap; /* ini penting buat bikin horizontal scroll */
 }
 
 .history-links ul {
-    list-style-type: none;
+    display: inline-block;  /* biar <ul> bisa scroll horizontal */
+    white-space: nowrap;
+    padding-right: 10px;
 }
 
 .history-links li {
@@ -218,7 +224,9 @@ main {
     color: #333;
     text-decoration: none;
     font-size: 14px;
+    word-break: keep-all; /* biar link ga patah */
 }
+
 
 .history-links a:hover {
     text-decoration: underline;
