--- a/admin/static/history.css
+++ b/admin/static/history.css
@@ -43,7 +43,7 @@ body {
     border-radius: 50%;
     margin: 0 auto 15px;
     overflow: hidden;
-    border: 3px solid rgba(255, 255, 255, 0.2);
+    border: 3px solid white
 }
 
 .profile-image img {
