--- a/admin/static/overview.css
+++ b/admin/static/overview.css
@@ -30,25 +30,14 @@ body {
 }
 
 /* Gambar profil user */
-.user-pic {
+.user-pic img {
   width: 80px;
   height: 80px;
-  background-color: #c4c4c4;
   border-radius: 50%;
-  margin-bottom: 5vh;
-  text-align: center;
+  border: 2px solid white;
+  margin-bottom: 15px;
+  overflow: hidden;
   margin-top: 20px;
-  padding: 0 20px;
-}
-
-.user-pic img {
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    margin: 0 auto 15px;
-    overflow: hidden;
-    border: 3px solid rgba(255, 255, 255, 0.2);
-    object-fit: cover;  /* Ensures the image is properly scaled */
 }
 
 /* Nama user */
